update app styles, update components

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply bg-zinc-900 text-zinc-400 antialiased;
+  }
+
+  h1,
+  h2,
+  h3 {
+    @apply text-zinc-50;
+  }
+}
